[FIX] z-index middle UI panel

--- a/rvl-d3vis/src/main/resources/web/css/layout-ui.css
+++ b/rvl-d3vis/src/main/resources/web/css/layout-ui.css
@@ -39,9 +39,12 @@ body {
   display: table-cell;
   padding: 0px;
   vertical-align:top;
+  }
+  
+#left, #right {
   position: relative;
   z-index: 2999;
-  }
+}
   
 #left {
   text-align:left;
